# linovelib2epub

./: .all-contributorsrc  .gitignore  .tokeignore  LICENSE  README.md  demo.py  publish-pypi.sh  publish-testpypi.sh  publish.sh  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-and-publish.yml  detect-version-bump.yml  log-version.yml  stale-issues-and-prs.yml
analyze/: 0.xhtml.html  163840.html  2.xhtml.html  ReadParams.js  catalog-2.html  catalog-final-2.json  catalog.html  content_dict.txt  epub_cover.html  script.html  tmp.html  urls.json
analyze/linovelib-mobile/: author-and-translator.html  catalog_html_2.html  catalog_sample_2.html  cf-turnstile.html  chapter_sample.html  content_dict.txt  img-rs-headers.json  mobile-version-text-not-intact.html  next_page_link.html  readtool.js  sample.html  tw.readtool.js
analyze/linovelib-pc/: one_page.html  paging.html  readParams.js  volume-list.html
analyze/masiro/: chapters.html  cid_73826.html  nvl-content.html  points.html  sample.html
analyze/styles/: chapter-normal.css
analyze/the-war-end-the-world/: README.md
analyze/wenku8/: 2379.html  3500-catalog.html  chapter_sample.html  id_content.html  tmp.html  toc.html  插图.html
docs/: .pypirc  add-css-to-epub.md  duplicate-image-part-in-epub.md  how-to-setup-GOT-OCR2.0.md  inspect-linovelib-contentid-as-a-regular-user.md  introduce-flake8.md  issue-1-duplicate-image-part-in-epub.md  issue-2-character-messy-code.md  manage_deps.md  pre-commit-vs-ci.md  process-analysis.md  python-better-console-output.md  python-method-parameters.md  python-package-guide.md  python-parse-json.md  reasearch-of python-command-tool.md  requests-session.md  setup-GOT-OCR2.0.md  setup-github-action-build.md  setup-tesseract.md  what-is-epub3.md
docs-internal/: add-css-to-epub.md  architecture-design.md  cli-tool-alternatives.md  dataclasses.md  handle-multithread-exceptions.md  install-local-package.md  issue-2-character-messy-code.md  js-encryption.md  linovelib-cloudflare.md  linovelib-pc-font-obfuscation.md  manage_deps.md  masiro.md  pre-commit-vs-ci.md  publish-package-in-local-env.md  pytest-cases.md  requests-session.md  setup-mypy.md  some-issues-record.md
docs-internal/setup-legacy/: setup.py
playground/: add_image.py  aiologger_demo.py  class_as_param.py  class_vriables.py  dataclass_demo.py  deprecated_warning.py  fix_cover_url.py  mock_novel.py  new_basic_usage.py  nonlocal_demo.py  pickle_test.py  profile_test.py  req_racing.py  show_as_json.py  simple_flask.py  str_trans.py  test_logger.py  test_logger_format.py  test_mp_logging.py  test_reg.py  test_request_cookie.py  test_request_exception.py  test_strip_js.py  test_use_package.py  test_use_proxy.py  test_validate_title.py  tmp.py  url_parse.py
playground/aiohttp_batch/: aiohttp_batch_gather.py  tmp.html
playground/asyncio-and-requests-task/: index.py
playground/cli_tool/: alternatives.md  docopt_cli.py  inquirerpy.py  python-inquirer.py  use_argparse.py
playground/cloudflare-turnstile/: 00_ref_experiment.py  01_bypass_cloudflare_turnstile.py  02_undetected_driver.py  03_drissionpage.py
playground/cpu/: cpuinfo_demo.py  psutil_demo.py
playground/fix-linovelib/: 403.html  drissionpage_demo.py  index.py  index_2.py  requests_demo.py  selenium_demo.py  selenium_proxy_verify.py
playground/issue-aiohttp-certificate-error/: sample.py  sample2.py
playground/js-anti-obfuscation-1/: de4js-sample-3-copy.html  jsnice.html  readtool.js
playground/js-anti-obfuscation-2/: anti_obfuscation.json  extract_rule.py  index.ts
playground/js-anti-obfuscation-3/: demo.py  hm-decode.js  hm-key-parts.js  hm.js
playground/linovelib-js-anti-v2/: anti_obfuscation.json  extract_rule.py  js-decode.js
playground/linovelib-pc/: page_screenshot.py  parse_catalog.py  parse_font.py  tesseract_demo.py
playground/masiro_html/: catalog_list.json  li.html  parsing.py  sample.html  sample2.html  toc.html
playground/multiprocessing_logging/: global_logger.py  logger_not_work.py  logging_queue.py  manager_demo.py  multiprocessing_logging_demo.py  multiprocessing_main_process.py  multiprocessing_manager_demo.py  readme.md
playground/ocr/: compare.txt  paddleocr_demo.py  rapidocr_demo.py  save_ocr_result.py  tesseract_demo.py
playground/optimize-mapping-rule-fetching/: aiohttp_demo.py  fetch_js.py  index.py
playground/parse_js/: ast.json  cleaned.js  extract_readtool.py  probe_js_file.py  strip_comments.py  tw.readtool.js
playground/refactor_image_download/: image_urls.json  use_asyncio_gather.py  use_asyncio_wait.py  use_multiprocessing.py  use_multiprocessing_with_log.py  use_threads.py  utils.py
playground/test_console/: colorma_test.py  console-log-alternatives.md  logger.py  tabulate_test.py  terminal-vars.py  tqdm_test.py
playground/test_epub/: ebook_demo.py
playground/test_rich/: report.txt  rich_columns.py  rich_console.py  (+10 more)
sample/: catalog-fixed-2.json  catalog.json
src/: crawl_step_1.py  linovelib2epub.py  main.py  settings.py
test/: assign_test.py  crawl_step_1.py  creat_folder.py  debug_char.py  download_image.py  ebook_demo.py  epub.cover.py  global_var.py  json_parse_test.py  or_test.py  pickle_test.py  play.py  read_pickle.py  reg_test.py  retry_1.py  return_test.py  test_cookie.py  test_example.py  test_proxy.py  test_read_file.py  test_request.py  test_request_cookie.py  test_use_local_package.py  test_use_remote_package.py  thread_count.py  tmp.py  try.py  try_except_continue.py
(+63 files in other folders)
