# refer: https://github.com/pypa/hatch/blob/master/pyproject.toml

[build-system]
requires = ["hatchling>=1.4.1"]
build-backend = "hatchling.build"

[project]
name = "linovelib2epub"
description = "Craw light novel from [哔哩轻小说(linovelib)](https://w.linovelib.com/) and convert to epub."
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    'ebook',
    'epub',
    'light novel',
    '哔哩轻小说',
    'library'
]
authors = [
    { name = "wdpm", email = "1137299673@qq.com" },
]
# refer: https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Natural Language :: Chinese (Simplified)",
    "Natural Language :: Chinese (Traditional)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
]

# alternatives: use hatch plugin to read requirement.txt
# now is manual work
dependencies = [
    'bs4>=0.0.1',
    'demjson3>=3.0.5',
    'EbookLib>=0.17.1',
    'fake-useragent>=1.1.1',
    'requests>=2.28.1',
    'rich>=12.5.1',
    'uuid>=1.30',
    'pillow>=9.2.0',
    'inquirer>=3.1.2',
    'aiofiles>=23.1.0',
    'aiohttp>=3.8.4',
    'dynaconf>=3.2.3',
    'brotli>=1.1.0',
    'lxml>=4.9.2',
    'tabulate>=0.9.0',
    'DrissionPage>=4.0.4.5'
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/wdpm/linovelib2epub"
Source = "https://github.com/wdpm/linovelib2epub"
Tracker = "https://github.com/wdpm/linovelib2epub/issues"

[tool.hatch.version]
path = "src/linovelib2epub/__about__.py"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
    "/analyze",
    "/docs*",
    "/playground",
]

[tool.hatch.build.force-include]

[tool.hatch.build.targets.wheel]

[tool.mypy]
files = [
    #    "src/linovelib2epub/models.py",
    #    "src/linovelib2epub/utils.py",
    #    "src/linovelib2epub/settings.py",
    #    "src/linovelib2epub/exceptions.py",
    #    "src/linovelib2epub/__init__.py",
    #    "src/linovelib2epub/__about__.py",
    #    "src/linovelib2epub/logger.py",
    #    "src/linovelib2epub/linovel.py",
    "src/linovelib2epub/spider/base_spider.py",
]
#pretty = true
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

# some third-party package has no typings, ignore it
#See https://mypy.readthedocs.io/en/stable/running_mypy.html#missing-imports
ignore_missing_imports = true
#disallow_untyped_defs = false
#follow_imports = "normal"
#show_column_numbers = true
#warn_no_return = false
